<resources>
    <string name="app_name">Kampung</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="main_label">Home</string>
    <string name="main_text">Welcome to Kampong!</string>
    <string name="main_order_button_text">Let\'s Dabao</string>
    <string name="main_search_button_text">Search orders!</string>

    <string name="second_fragment_label">Let\'s Dabao!</string>
    <string name="previous">Go back</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dabao_dabao_button_text">Dabao!</string>
    <string name="title_activity_bottom_nav">Bottom_Nav_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_user_profile">Posted By John</string>
    <string name="profile">User Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="restaurant">Mcdonald’s</string>
    <string name="location">Changi City Point</string>
    <string name="x_mins_ago">x mins ago</string>

    <string name="order">order</string>
    <string name="dest">SUTD Main Entrance</string>
    <string name="telehandle">telehandle</string>
    <string name="dabao">Dabao</string>

    <string name="checkbox">com.example.kampung</string>
    <string name="userTeleHandle">com.example.kampung</string>
    <string name="request">Requests</string>
    <string name="username">John</string>
    <string name="teleHandle">\@Jonny</string>
    <string name="phoneNumber">90430303</string>
    <string name="order_details">Order Details</string>
    <string name="new_request">New Request</string>

    <string name="is_delivered">Order has been delivered</string>

</resources>