<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.userprofile.UserProfileFragment">

    <ImageView
        android:id="@+id/bg_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/bg_house" />

    <TextView
        android:id="@+id/text_userprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_userprofile"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/username"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/telegram_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@id/username"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_telegram" />

    <TextView
        android:id="@+id/telegram_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/telegram_icon"
        android:layout_alignTop="@+id/telegram_icon"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="start"
        android:text="@string/teleHandle"
        android:textColor="#B3000000"
        android:textSize="12sp" />


    <ImageView
        android:id="@+id/number_icon"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_below="@id/telegram_icon"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_phone" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/number_icon"
        android:layout_alignTop="@+id/number_icon"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="start"
        android:text="@string/phoneNumber"
        android:textColor="#B3000000"
        android:textSize="12sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="315dp"
        android:layout_height="1dp"
        android:layout_below="@id/phone_number"
        android:layout_centerInParent="true"
        android:background="#33612500" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_requests"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="?attr/actionBarSize"
        android:scrollbars="vertical" />



</RelativeLayout>