<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    card_view:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/card_gradient" >

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/text_requestlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/location_icon"
            android:layout_alignTop="@+id/location_icon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="start"
            android:hint="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/brown"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/location_icon"
            android:layout_alignTop="@+id/location_icon"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pt_serif_bold"
            android:gravity="start"
            android:hint="@string/restaurant"
            android:textColor="#081F32"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_reqtime_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/location_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="end"
            android:hint="@string/x_mins_ago"
            android:textColor="@color/brown"
            android:textSize="11sp" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>